# ohrm-jsonld-exporter-cdl

./: .gitignore  AGENTS.md  README.md  pyproject.toml
ohrm_converter/: __init__.py  cli.py  config.py  crate.py  loader.py
ohrm_converter/exporters/: __init__.py  arcresource.py  base.py  dobject.py  dobjectversion.py  earrship.py  edorship.py  efrship.py  entity.py  entityevent.py  entityname.py  eprrship.py  function.py  prreprship.py  pubresource.py  relatedentity.py  relatedresource.py  repository.py
ohrm_converter/models/: __init__.py  entity.py  function.py  metadata.py  relationship.py  resource.py
scripts/: batch_test.py  pg_validate.py
tests/: conftest.py  test_cli.py  test_crate.py  test_exporter_entity.py  test_exporter_misc.py  test_exporter_relationships.py  test_exporter_resources.py  test_exporters_base.py  test_integration.py  test_loader.py
